--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
-
 /* Your CSS Code here. */
+.holder {
+  display: flex;
+	justify-content:center;
+	  align-items:center;
+}
+
+.item-1 {
+  width: 100px;
+  height: 100px;
+  margin: 15px;
+	background-color:pink;
+}
